--- a/app/src/main/res/layout/activity_member_init.xml
+++ b/app/src/main/res/layout/activity_member_init.xml
@@ -4,13 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="200dp"
         android:layout_gravity="center"
         android:gravity="center"
-        android:text="로그인"
+        android:text="회원정보"
         android:textColor="#03A9F4"
         android:textSize="24sp"
         android:textStyle="bold" />
@@ -22,32 +23,42 @@
         android:padding="10dp">
 
         <EditText
-            android:id="@+id/emailEditText"
+            android:id="@+id/et_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
             android:ems="10"
-            android:hint="아이디(이메일)"
-            android:inputType="textEmailAddress" />
+            android:hint="이름"
+            android:inputType="textPersonName" />
 
         <EditText
-            android:id="@+id/pwEditText"
+            android:id="@+id/et_phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
             android:ems="10"
-            android:hint="비밀번호(6자리이상)"
-            android:inputType="textPassword" />
+            android:hint="전화번호"
+            android:inputType="phone" />
+
+        <EditText
+            android:id="@+id/et_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="생년월일"
+            android:inputType="date" />
+
+        <EditText
+            android:id="@+id/et_address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="주소"
+            android:inputType="textPostalAddress" />
+
         <Button
             android:id="@+id/btn_checkinfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="회원가입" />
+            android:text="확인" />
 
-        <Button
-            android:id="@+id/btn_login"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="로그인" />
     </LinearLayout>
 </LinearLayout>
