갤러리에서 프로필 선택후 프로필선택 사진 추가-db연동까지 완료

--- a/app/src/main/res/layout/activity_member_init.xml
+++ b/app/src/main/res/layout/activity_member_init.xml
@@ -32,6 +32,7 @@
         android:layout_alignParentBottom="true"
         android:elevation="10dp"
         android:visibility="gone"
+        app:cardBackgroundColor="#00BCD4"
         app:cardCornerRadius="15dp">
 
         <LinearLayout
