게시글 추가 기능 및 사진 추가 까지 완료.

--- a/app/src/main/res/layout/activity_member_init.xml
+++ b/app/src/main/res/layout/activity_member_init.xml
@@ -42,13 +42,13 @@
             android:padding="5dp">
 
             <Button
-                android:id="@+id/btn_picshot"
+                android:id="@+id/btn_imgModify"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="사진촬영" />
 
             <Button
-                android:id="@+id/btn_gallery"
+                android:id="@+id/btn_delete"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="갤러리" />
