--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    >
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
+
+
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
@@ -20,6 +26,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="10dp">
+
 
         <EditText
             android:id="@+id/emailEditText"
@@ -51,3 +58,9 @@
             android:text="로그인" />
     </LinearLayout>
 </LinearLayout>
+    <include
+        layout="@layout/view_loader"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
+</RelativeLayout>
