--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -36,18 +36,26 @@
                 android:id="@+id/menu_post"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                app:cardCornerRadius="20dp">
+                android:layout_margin="5dp"
+                app:cardCornerRadius="15dp">
 
                 <ImageView
                     android:id="@+id/imageView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="right"
+                    android:layout_margin="3dp"
                     android:src="@drawable/ic_baseline_more_vert_24" />
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:background="#F6CFCF"></RelativeLayout>
         <LinearLayout
             android:id="@+id/contentsLayout"
             android:layout_width="match_parent"
